# processing_microservice

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  SPEC.md  ai.txt  llms-full.txt  processing_service.cpp
k8s/: deployment.yaml
tests/: test_core.cpp
